[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-tool-openai-images"
version = "0.1.0"
description = "OpenAI Images API tool for Amplifier — image generation, editing, and background removal via gpt-image-2 and gpt-image-1.5"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[project.entry-points."amplifier.modules"]
tool-openai-images = "amplifier_module_tool_openai_images:mount"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_openai_images"]

[tool.ruff]
target-version = "py311"
line-length = 100
